[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lingualabpy"
authors = [
    { name = "Christophe Bedetti", email = "christophe.bedetti@umontreal.ca" },
]
license = { file = "LICENSE" }
description = "Tools and utilities from the LINGUA laboratory"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8.1"
dynamic = ["version"]

dependencies = [
    "click",
    "matplotlib",
    "opencv-python",
    "pandas",
    "praat-parselmouth",
    "praat-textgrids",
    "pydub",
    "python-docx",
    "nilearn==0.12.1"
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
style = ["black", "ruff"]

[project.scripts]
lingualabpy_audio_metrics = "lingualabpy.cli.audio_metrics:main"
lingualabpy_audio_triming = "lingualabpy.cli.audio_triming:main"
lingualabpy_docx2json = "lingualabpy.cli.docx2json:main"
lingualabpy_jsons2csv = "lingualabpy.cli.jsons2csv:main"
lingualabpy_plot_sound = "lingualabpy.cli.plot_sound:main"
lingualabpy_hcp_connectome = "lingualabpy.neuroimaging.hcp_connectome:main"

[project.urls]
Documentation = "https://github.com/lingualab/lingualabpy"
Source = "https://github.com/lingualab/lingualabpy"
Tracker = "https://github.com/lingualab/lingualabpy/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/lingualabpy/_version.py"

[tool.hatch.build]
packages = ["src/lingualabpy"]

[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["src",]
addopts = """
    --cov=src/speechmetryflow
    --cov-report=html
"""

[tool.coverage.run]
omit = ["*/_version.py"]
